* 修正部署示例的问题